--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "astro": "^5.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "swiper": "^11.2.2",
-    "tailwindcss": "^4.0.3"
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss": "^4.0.3",
+    "tw-animate-css": "^1.2.4"
   }
 }
