--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
     "dist"
   ],
   "compilerOptions": {
+    "target": "es2015",
+    "lib": ["dom", "es2015"], 
     "jsx": "react-jsx",
     "jsxImportSource": "react",
     "baseUrl": ".",
