--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "making_something",
   "type": "module",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^6.0.2",
     "@astrojs/vercel": "^8.1.3",
     "@hookform/resolvers": "^4.1.3",
+    "@lucide/astro": "^0.487.0",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
