added dinamic routes support and product json collection

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
     "lib": ["dom", "es2015"], 
     "jsx": "react-jsx",
     "jsxImportSource": "react",
+    "strictNullChecks": true, // add if using `base` template
+    "allowJs": true, // required, and included with all Astro templates
     "baseUrl": ".",
     "paths": {
       "@/*": [
