--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     "@astrojs/vercel": "^8.1.3",
     "@hookform/resolvers": "^4.1.3",
     "@lucide/astro": "^0.487.0",
+    "@radix-ui/react-checkbox": "^1.1.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.7",
+    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-select": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.3",
+    "@radix-ui/react-slot": "^1.2.0",
     "@tailwindcss/vite": "^4.0.3",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
@@ -26,7 +32,7 @@
     "lucide-react": "^0.483.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.55.0",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.3",
