--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@hookform/resolvers": "^4.1.3",
     "@lucide/astro": "^0.487.0",
     "@radix-ui/react-checkbox": "^1.1.5",
+    "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.1.4",
+    "@radix-ui/react-tooltip": "^1.2.0",
     "@tailwindcss/vite": "^4.0.3",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
