--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "making_something",
   "type": "module",
-  "version": "0.5.2",
+  "version": "0.6.0",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -9,10 +9,15 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^12.5.3",
     "@astrojs/netlify": "^6.2.6",
+    "@astrojs/node": "^9.2.2",
     "@astrojs/react": "^4.2.4",
     "@astrojs/tailwind": "^6.0.2",
     "@astrojs/vercel": "^8.1.3",
+    "@clerk/astro": "^2.8.0",
+    "@clerk/localizations": "^3.16.1",
+    "@clerk/themes": "^2.2.46",
     "@hookform/resolvers": "^4.1.3",
     "@lucide/astro": "^0.487.0",
     "@radix-ui/react-checkbox": "^1.1.5",
@@ -27,7 +32,7 @@
     "@tailwindcss/vite": "^4.0.3",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
-    "astro": "^5.6.2",
+    "astro": "^5.8.0",
     "avvvatars-react": "^0.4.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
