--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "start": "noder server.js",
+    "start": "node server.js",
     "astro": "astro"
   },
   "dependencies": {
