--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "making_something",
   "type": "module",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -21,6 +21,7 @@
     "@clerk/themes": "^2.2.46",
     "@hookform/resolvers": "^4.1.3",
     "@lucide/astro": "^0.487.0",
+    "@nanostores/react": "^1.0.0",
     "@radix-ui/react-checkbox": "^1.1.5",
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
@@ -39,9 +40,12 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.483.0",
+    "nanostores": "^1.0.1",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
+    "sonner": "^2.0.6",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.3",
