--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "^12.5.3",
+    "@astrojs/cloudflare": "^12.6.6",
     "@astrojs/netlify": "^6.2.6",
     "@astrojs/node": "^9.2.2",
     "@astrojs/react": "^4.3.0",
@@ -34,7 +34,7 @@
     "@tailwindcss/vite": "^4.0.3",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "astro": "^5.8.0",
+    "astro": "^5.13.4",
     "avvvatars-react": "^0.4.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -51,5 +51,8 @@
     "tailwindcss": "^4.0.3",
     "tw-animate-css": "^1.2.4",
     "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "wrangler": "^4.33.0"
   }
 }
