--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "making_something",
   "type": "module",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -22,6 +22,7 @@
     "@hookform/resolvers": "^4.1.3",
     "@lucide/astro": "^0.487.0",
     "@nanostores/react": "^1.0.0",
+    "@prisma/client": "^6.15.0",
     "@radix-ui/react-checkbox": "^1.1.5",
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
@@ -46,6 +47,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
     "sonner": "^2.0.6",
+    "svix": "^1.76.1",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.3",
@@ -53,6 +55,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "prisma": "^6.15.0",
     "wrangler": "^4.33.0"
   }
 }
