--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,5 +3,13 @@ compatibility_date = "2024-08-27"
 main = "./dist/worker/index.js"
 
 [vars]
-PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_cmVsYXhlZC1rYXR5ZGlkLTM1LmNsZXJrLmFjY291bnRzLmRldiQ
-CLERK_SECRET_KEY=sk_test_UxRlKyThh9CQOgKfrfL85UCA4ffzKoAqpC6DGUGrBc
+PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
+
+## Database connection
+DATABASE_URL=
+
+## API
+API_URL=
+
+CLERK_WEBHOOK_SIGNING_SECRET=
