--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@hookform/resolvers": "^4.1.3",
     "@lucide/astro": "^0.487.0",
     "@nanostores/react": "^1.0.0",
-    "@prisma/client": "^6.15.0",
+    "@neondatabase/serverless": "^1.0.1",
+    "@prisma/adapter-neon": "^6.16.2",
+    "@prisma/client": "^6.16.2",
     "@radix-ui/react-checkbox": "^1.1.5",
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
@@ -55,7 +57,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "prisma": "^6.15.0",
+    "prisma": "^6.16.2",
     "wrangler": "^4.33.0"
   }
 }
