--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@neondatabase/serverless": "^1.0.1",
     "@prisma/adapter-neon": "^6.16.2",
     "@prisma/client": "^6.16.2",
+    "@prisma/extension-accelerate": "^2.0.2",
     "@radix-ui/react-checkbox": "^1.1.5",
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
@@ -41,6 +42,7 @@
     "avvvatars-react": "^0.4.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.483.0",
     "nanostores": "^1.0.1",
@@ -54,9 +56,11 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.3",
     "tw-animate-css": "^1.2.4",
+    "ws": "^8.18.3",
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/ws": "^8.18.1",
     "prisma": "^6.16.2",
     "wrangler": "^4.33.0"
   }
