feat: Implement authentication buttons and user session management
- Added LogginButtons component for user authentication with Supabase.
- Created supabaseClient for handling Supabase interactions.
- Developed LayoutLogin.astro for login and registration pages.
- Introduced Zod schemas for payment, profile, and shipment data validation.
- Updated Blog, Login, Products, and Register pages with new layouts and components.

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,2 @@
-PUBLIC_CLERK_PUBLISHABLE_KEY=
-CLERK_SECRET_KEY=
-
-## Database connection
-DATABASE_URL=
-
-## API
-API_URL=
-
-CLERK_WEBHOOK_SIGNING_SECRET=
+SUPABASE_URL=
+SUPABASE_ANON_KEY=
