--- a/package.json
+++ b/package.json
@@ -11,21 +11,12 @@
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.6.6",
-    "@astrojs/netlify": "^6.2.6",
     "@astrojs/node": "^9.2.2",
     "@astrojs/react": "^4.3.0",
     "@astrojs/tailwind": "^6.0.2",
-    "@astrojs/vercel": "^8.1.3",
-    "@clerk/astro": "^2.8.0",
-    "@clerk/localizations": "^3.16.1",
-    "@clerk/themes": "^2.2.46",
     "@hookform/resolvers": "^4.1.3",
     "@lucide/astro": "^0.487.0",
     "@nanostores/react": "^1.0.0",
-    "@neondatabase/serverless": "^1.0.1",
-    "@prisma/adapter-neon": "^6.16.2",
-    "@prisma/client": "^6.19.0",
-    "@prisma/extension-accelerate": "^2.0.2",
     "@radix-ui/react-checkbox": "^1.1.5",
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
@@ -35,6 +26,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@supabase/supabase-js": "^2.84.0",
     "@tailwindcss/vite": "^4.0.3",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -61,7 +53,6 @@
   },
   "devDependencies": {
     "@types/ws": "^8.18.1",
-    "prisma": "^6.19.0",
     "wrangler": "^4.33.0"
   }
 }
